fix: notification toasts being hidden by modal backdrop

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -59,6 +59,7 @@
    --scrollbar-color: #ddd;
 
    --toastify-toast-min-height: 34px;
+   --toastify-z-index: 999999999;
 
    --light-grey: #f2f2f2;
 }
